--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "cookie": "^0.4.1",
     "next": "^11.1.4",
+    "node-sass": "^5.0.0",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
+    "react-slick": "^0.29.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "7.31.0",
