--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "cookie": "^0.4.1",
-    "next": "^11.1.4",
-    "node-sass": "^5.0.0",
+    "mdb-react-ui-kit": "^4.1.0",
+    "mdbreact": "^4.6.1",
+    "next": "^12.2.4",
+    "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
