--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "bootstrap": "^5.2.0",
     "cookie": "^0.4.1",
     "mdb-react-ui-kit": "^4.1.0",
@@ -29,6 +34,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1"
   }
