--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.0",
     "cookie": "^0.4.1",
     "mdb-react-ui-kit": "^4.1.0",
