--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.0.1",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "cookie": "^0.4.1",
     "mdb-react-ui-kit": "^4.1.0",
