--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,13 @@
     "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-data-table-component": "^7.5.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
     "react-slick": "^0.29.0",
+    "reactstrap": "^9.1.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
