--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^2.4.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
@@ -42,7 +43,10 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
+    "autoprefixer": "^10.4.8",
     "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
