--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,14 +22,15 @@
     "bootstrap": "^5.2.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "cookie": "^0.4.1",
+    "draft-js": "^0.11.7",
     "mdb-react-ui-kit": "^4.1.0",
     "mdbreact": "^4.6.1",
     "next": "^12.2.4",
     "node-sass": "^7.0.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-data-table-component": "^7.5.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^4.0.0",
