--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "ckeditor5-custom-build": "file:ckeditor5",
     "cookie": "^0.4.1",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "mdb-react-ui-kit": "^4.1.0",
     "mdbreact": "^4.6.1",
     "next": "^12.2.4",
@@ -31,6 +32,7 @@
     "react-bootstrap": "^2.4.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^4.0.0",
