--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-facebook-login": "^4.1.1",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^4.0.0",
