--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,5 @@ Django==3.2.5
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
-psycopg2==2.9.1
+psycopg2==2.9.1martor 
+gunicorn 
