--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,9 +1,15 @@
-version: '3.9'
-
+version: "3.9"
 services:
   web:
-    build: '.'
+    build: .
     ports:
       - "8000:8000"
-    env_file:
-      - 'fablanka/.env'
+    extra_hosts:
+      - "postgresql:192.168.1.22"
+    command: python manage.py runserver 0.0.0.0:8000
+    environment:
+      - POSTGRES_HOST=fablanka.czfxoxflq1jz.ap-southeast-1.rds.amazonaws.com
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=Fablanka#2022
+    volumes:
+      - .:/code  
