--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,12 +1,13 @@
 version: "3.9"
 services:
   web:
+    image: fablanka
     build: .
     ports:
-      - "8000:8000"
+      - "8000:80"
     extra_hosts:
       - "postgresql:192.168.1.22"
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:3000
     environment:
       - POSTGRES_HOST=fablanka.czfxoxflq1jz.ap-southeast-1.rds.amazonaws.com
       - POSTGRES_USER=postgres
