--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "make-q": "node ./build.js",
+    "build": "npm run make-q && next build",
     "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
