--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.5",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
