--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "make-q": "node ./build.js",
-    "build": "npm run make-q && next build",
+    "build": "next build && next export",
     "export": "next build && next export",
+    "ex": "next export",
     "start": "next start",
     "lint": "next lint"
   },
