--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     image: fablanka
     build: .
     ports:
-      - "8000:80"
+      - "3000:3000"
     extra_hosts:
       - "postgresql:192.168.1.22"
     command: python manage.py runserver 0.0.0.0:3000
     environment:
-      - POSTGRES_HOST=fablanka.czfxoxflq1jz.ap-southeast-1.rds.amazonaws.com
+      - POSTGRES_HOST=localhost
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=Fablanka#2022
+      - POSTGRES_PASSWORD=password
     volumes:
       - .:/code  
