--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "make-q": "node ./build.js",
     "build": "npm run make-q && next build",
-    "export": "next build && next export",
+    "build_and_export": "next build && next export",
     "ex": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "aws s3 cp --recursive ./out s3://testfablanka.org"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
