--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "make-q": "node ./build.js",
-    "build": "npm run make-q && next build",
-    "build_and_export": "next build && next export",
+    "build": "next build && next export",
+    "export": "next build && next export",
     "ex": "next export",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "aws s3 cp --recursive ./out s3://testfablanka.org"
+    "lint": "next lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
