--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "make-q": "node ./build.js",
-    "build": "next build",
+    "build": "next build && next export",
     "export": "next build && next export",
     "ex": "next export",
     "start": "next start",
