--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "export": "next build && next export",
     "ex": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:css": "postcss ./static/css/main.css -o ./static/css/main-prefixed.css"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -52,7 +53,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.12",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "postcss": "^8.4.16",
