--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 NODE_ENV=production
-NEXT_PUBLIC_API_URL = 'https://api.fablanka.org/'
+NEXT_PUBLIC_API_URL = 'http://fablanka-alb-2044345282.ap-southeast-1.elb.amazonaws.com/'
