--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "export": "next build && next export",
     "ex": "next export",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
+    "autoprefixer": "^10.4.12",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "postcss": "^8.4.16",
