--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "make-q": "node ./build.js",
     "build": "next build",
-    "export": "next build && next export",
-    "ex": "next export",
-    "start": "next start -p 3001",
-    "lint": "next lint"
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "export": "next export",
+    "build:deploy": "next build && next export"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -28,7 +28,7 @@
     "draftjs-to-html": "^0.9.1",
     "mdb-react-ui-kit": "^4.1.0",
     "mdbreact": "^4.6.1",
-    "next": "^12.2.4",
+    "next": "11.0.1",
     "nextjs-cors": "^2.1.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
